incluse server and getStoreById

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-xs-12">
-      <h1>Check In To Store</h1>
-      <app-visitores-form></app-visitores-form>
+     <router-outlet></router-outlet>
     </div>
   </div>
 </div>
