--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,16 +1,52 @@
-<nav style="background-color: #1e7e34 !important" class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <a class="nav-link">{{this.storeOwner.name}} <span class="sr-only"></span></a>
-      <button (click)="logout()" class="btn btn-outline-success my-2 my-sm-0">Logout</button>
-    </form>
+<body>
+  <div class=" container-fluid">
+    <div class="row">
+      <div class="col-sm-2">
+        <form class="logout">
+          <button (click)="logout()" class="btn btn-outline-success my-2 my-sm-0">Logout</button>
+          <img src={{storeOwner.picture}} class="img-fluid" width="40">
+        </form>
+      </div>
+      <div class="col-sm-8">
+        <div class="card border-primary mb-3">
+          <h2 class="card-header"> Visitors list </h2>
+          <div class="card-body">
+            <div class="table table-bordered">
+              <table class="table table-hover table-dark">
+                <thead>
+                  <tr>
+                    <th class="text-center">#</th>
+                    <th>Name</th>
+                    <th class="text-center">Phone</th>
+                    <th class="text-center">email</th>
+                    <th class="text-center">Time</th>
+                    <th class="text-center">Actions</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let visitor of visitors; let i = index">
+                    <td class="text-center text-muted">{{i+1}}</td>
+                    <td>
+                      <div class="widget-content-left flex2">
+                        <div class="widget-heading">{{visitor.first_name}}</div>
+                        <div class="widget-subheading opacity-7">{{visitor.last_name}}</div>
+                      </div>
+                    </td>
+                    <td class="text-center">{{visitor.phone}}</td>
+                    <td class="text-center"> {{visitor.email}} </td>
+                    <td class="text-center"> {{visitor.time}} </td>
+                    <td class="text-center"><button class="btn-wide btn btn-danger"> Delete </button></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+        
+      </div>
+      <div class="col-sm-2">
+        
+      </div>
+    </div>
   </div>
-</nav>
+</body>
