--- a/src/app/visitors-form/visitors-form.component.html
+++ b/src/app/visitors-form/visitors-form.component.html
@@ -39,4 +39,8 @@
     <!-- Register Button -->
     <button type="submit" class="btn btn-primary" >Register</button>
   </div>
+    <div class="form-group has-error">
+      <!-- Back Button -->
+      <button (click) = "this.storeToUpdateChange.emit(null)" class="btn btn-primary">Back</button>
+    </div>
 </form>   
