--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    font-family: "Montserrat-Medium ";
+    background-color: rgb(255, 255, 255);
+}
+
+
 
