--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -8,7 +8,6 @@
         </div>
       </div>
       <div class="col-sm-8">
-        
         <div class="storeOwnerCard">
           <igx-card>
             <igx-card-header> {{store.store_name}} </igx-card-header>
@@ -25,26 +24,35 @@
             </igx-card-actions>
           </igx-card>
         </div>
-        
-            
-        <div class="sample-wrapper">
-          <igx-grid #gridRowEditTransaction [data]="visitors" [primaryKey]="'id'" width="100%" height="500px"
-            [rowEditable]="true">
+        <div class="visitorsGrid">
+          <igx-grid #myGrid [data]="visitors" [primaryKey]="'id'" width="100%" height="500px" [rowEditable]="true">
             <igx-column field="id" header="Id" editable="false"></igx-column>
             <igx-column field="first_name" header="First name" [dataType]="'string'"></igx-column>
             <igx-column field="last_name" header="Last name" [dataType]="'string'"></igx-column>
-            <igx-column field="phone" header="Phone" [dataType]="'string'"></igx-column>  
+            <igx-column field="phone" header="Phone" [dataType]="'string'"></igx-column>
             <igx-column field="email" header="Email" [dataType]="'string'"></igx-column>
             <igx-column field="time" header="Time" [dataType]="'string'"></igx-column>
             <igx-column field="Discontinued" header="Discontinued" [dataType]="'boolean'"></igx-column>
+            <ng-template igxCellEditor let-cell="cell">
+              <igx-input-group>
+                <input igxInput [igxFocus]='true' name="units" [(ngModel)]="cell.editValue" style="color: black" />
+              </igx-input-group>
+            </ng-template>
+            <ng-template igxRowEditActions let-endRowEdit>
+              <div class="custom-buttons">
+                <button igxButton="icon" class="custom-button" igxRowEditTabStop (click)="endRowEdit(false)">
+                  <igx-icon>clear</igx-icon>
+                </button>
+                <button igxButton="icon" class="custom-button" igxRowEditTabStop (click)="endRowEdit(true)">
+                  <igx-icon>check</igx-icon>
+                </button>
+              </div>
+            </ng-template>
           </igx-grid>
         </div>
-
       </div>
     </div>
-    
     <div class="col-sm-2">
-      
     </div>
   </div>
 </body>
