--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -25,25 +25,24 @@
           </igx-card>
         </div>
         <div class="visitorsGrid">
-          <igx-grid #myGrid [data]="visitors" [primaryKey]="'id'" width="100%" height="500px" [rowEditable]="true">
+          <igx-grid #myGrid [data]="visitors" [primaryKey]="'id'" width="100%" height="500px"(onRowEdit)="editDone($event)" [rowEditable]="true">
             <igx-column field="id" header="Id" editable="false"></igx-column>
             <igx-column field="first_name" header="First name" [dataType]="'string'"></igx-column>
             <igx-column field="last_name" header="Last name" [dataType]="'string'"></igx-column>
             <igx-column field="phone" header="Phone" [dataType]="'string'"></igx-column>
             <igx-column field="email" header="Email" [dataType]="'string'"></igx-column>
-            <igx-column field="time" header="Time" [dataType]="'string'"></igx-column>
-            <igx-column field="Discontinued" header="Discontinued" [dataType]="'boolean'"></igx-column>
+            <igx-column field="time" header="Time" [dataType]="'string'" editable="false"></igx-column>
             <ng-template igxCellEditor let-cell="cell">
               <igx-input-group>
                 <input igxInput [igxFocus]='true' name="units" [(ngModel)]="cell.editValue" style="color: black" />
               </igx-input-group>
             </ng-template>
-            <ng-template igxRowEditActions let-endRowEdit>
+            <ng-template igxRowEditActions let-endEdit>
               <div class="custom-buttons">
-                <button igxButton="icon" class="custom-button" igxRowEditTabStop (click)="endRowEdit(false)">
+                <button igxButton="icon" class="custom-button" igxRowEditTabStop (click)="endEdit(false)">
                   <igx-icon>clear</igx-icon>
                 </button>
-                <button igxButton="icon" class="custom-button" igxRowEditTabStop (click)="endRowEdit(true)">
+                <button igxButton="icon" class="custom-button" igxRowEditTabStop (click)="endEdit(true)">
                   <igx-icon>check</igx-icon>
                 </button>
               </div>
