--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,29 +1,16 @@
 <div class="container-fluid">
 
   <body class='text-center'>
-    <h1 class="h3 mb-3 font-weight-normal">Sign In With</h1>
+    <h1 class="h3 mb-3 font-weight-normal">Store owner Sign In With</h1>
     <div class="form-group">
       <button (click)="socialSignIn('google')"  type="button" class="btn btn-default">
           <img width="20px" style="margin-bottom:3px; margin-right:5px" alt="Google sign-in"
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" />
-          Login with Google 
+           Google 
        </button>
-    </div> OR 
+    </div> 
     
-    <form class="form-signin">
-      <img class="mb-4" src="/docs/4.4/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-      <label for="inputEmail" class="sr-only">Email address</label>
-      <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-      <label for="inputPassword" class="sr-only">Password</label>
-      <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
-      <div class="checkbox mb-3">
-        <label>
-          <input type="checkbox" value="remember-me"> Remember me </label>
-      </div>
-      <button class="btn btn-lg btn-primary btn-block" type="submit" disabled>Sign in</button>
-      <p class="mt-5 mb-3 text-muted">© 2020</p>
-    </form>
+    
   </body>
 </div>
 
