--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 // Import the IgniteUI themes library first
 @import '~igniteui-angular/lib/core/styles/themes/index';
 
-$primary-color: #030c5a;
+$primary-color: rgb(0, 160, 253);
 $secondary-color: #ffffff; 
 
 $my-color-palette: igx-palette(
