--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
 
   <body class='text-center'>
-    <h1 class="h3 mb-3 font-weight-normal">Store owner Sign In With</h1>
+    <h2 class="h3 mb-3 font-weight-normal">Store owner Sign In With</h2>
     <div class="form-group">
-      <button (click)="socialSignIn('google')"  type="button" class="btn btn-default">
+      <button igxButton="outlined" (click)="socialSignIn('google')">
           <img width="20px" style="margin-bottom:3px; margin-right:5px" alt="Google sign-in"
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" />
            Google 
