--- a/src/app/store-check-in/store-check-in.component.html
+++ b/src/app/store-check-in/store-check-in.component.html
@@ -1,13 +1,13 @@
 <div *ngIf="!store">
 <form [formGroup]="storeIdForm"  class='text-center'>
   <div class="form-group">
-    <h2>Check in to store with store ID</h2>
+    <h1>Check in to store with store ID</h1>
   </div>
   <div class="form-group">
     <input #storeId type="text" class="form-control" placeholder="Store ID">
   </div>
   <div class="form-group">
-    <button type="submit" class="btn btn-primary px-4" (click)="getStoreById(storeId.value)"> Check </button>
+    <button igxButton="outlined" (click)="getStoreById(storeId.value)"> Check in to store </button>
   </div>
 </form>
 </div>
@@ -15,7 +15,50 @@
 
 <div *ngIf="store" >
   
-  <h2  class='text-center' aria-atomic="true">{{store.store_name}} check in form</h2>
-  <app-visitors-form [(storeToUpdate)]='store'>
-  </app-visitors-form >
+<div class="container-fluid">
+  <div class="checkInCard">
+    <igx-card>
+      <igx-card-header> Visitor Check In Form </igx-card-header>
+      <igx-card-content>
+        <form class="input-group-form" [formGroup]="userForm" (ngSubmit)="onSubmit()">
+          <igx-input-group class="input-group-form">
+            <label igxLabel class="igxLabel" for="first_name"> First Name </label>
+            <input igxInput name="first_name" type="text" formControlName="first_name" required>
+            <igx-suffix>
+              <igx-icon class="personIcon" isActive="true">person</igx-icon>
+            </igx-suffix>
+          </igx-input-group>
+          <igx-input-group class="input-group-form">
+            <label igxLabel for="last_name"> Last Name </label>
+            <input igxInput name="last_name" type="text" formControlName="last_name" required>
+            <igx-suffix>
+              <igx-icon class="personIcon" isActive="true">person</igx-icon>
+            </igx-suffix>
+          </igx-input-group>
+          <igx-input-group class="input-group-form">
+            <label igxLabel for="phone"> Phone </label>
+            <input igxInput name="phone" type="text" formControlName="phone" required>
+            <igx-suffix>
+              <igx-icon class="personIcon" isActive="true">phone</igx-icon>
+            </igx-suffix>
+          </igx-input-group>
+          <igx-input-group class="input-group-form">
+            <label igxLabel for="email"> E-mail </label>
+            <input igxInput name="email" type="text" formControlName="email" required>
+            <igx-suffix>
+              <igx-icon class="personIcon">email</igx-icon>
+            </igx-suffix>
+          </igx-input-group>
+          <button igxButton="raised" igxRipple type="submit" [disabled]="!userForm.valid">Book</button>
+        </form>
+      </igx-card-content>
+    </igx-card>
+  </div>
 </div>
+<div *ngIf="store">
+  
+  
+</div>
+ 
+</div>
+  
