--- a/src/app/store-check-in/store-check-in.component.html
+++ b/src/app/store-check-in/store-check-in.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="!store">
-<form [formGroup]="storeIdForm"  class='text-center'>
+<form  class='text-center'>
   <div class="form-group">
     <h1>Check in to store with store ID</h1>
   </div>
@@ -18,35 +18,35 @@
 <div class="container-fluid">
   <div class="checkInCard">
     <igx-card>
-      <igx-card-header> Visitor Check In Form </igx-card-header>
+      <igx-card-header> Visitor Check In to {{store.store_name}}  Form </igx-card-header>
       <igx-card-content>
         <form class="input-group-form" [formGroup]="userForm" (ngSubmit)="onSubmit()">
           <igx-input-group class="input-group-form">
             <label igxLabel class="igxLabel" for="first_name"> First Name </label>
             <input igxInput name="first_name" type="text" formControlName="first_name" required>
             <igx-suffix>
-              <igx-icon class="personIcon" isActive="true">person</igx-icon>
+              <igx-icon  isActive="true">person</igx-icon>
             </igx-suffix>
           </igx-input-group>
           <igx-input-group class="input-group-form">
             <label igxLabel for="last_name"> Last Name </label>
             <input igxInput name="last_name" type="text" formControlName="last_name" required>
             <igx-suffix>
-              <igx-icon class="personIcon" isActive="true">person</igx-icon>
+              <igx-icon  isActive="true">person</igx-icon>
             </igx-suffix>
           </igx-input-group>
           <igx-input-group class="input-group-form">
             <label igxLabel for="phone"> Phone </label>
             <input igxInput name="phone" type="text" formControlName="phone" required>
             <igx-suffix>
-              <igx-icon class="personIcon" isActive="true">phone</igx-icon>
+              <igx-icon  isActive="true">phone</igx-icon>
             </igx-suffix>
           </igx-input-group>
           <igx-input-group class="input-group-form">
             <label igxLabel for="email"> E-mail </label>
             <input igxInput name="email" type="text" formControlName="email" required>
             <igx-suffix>
-              <igx-icon class="personIcon">email</igx-icon>
+              <igx-icon >email</igx-icon>
             </igx-suffix>
           </igx-input-group>
           <button igxButton="raised" igxRipple type="submit" [disabled]="!userForm.valid">Book</button>
