main screen flex layout

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,16 +1,5 @@
-<div class="container-fluid">
-
-  <body class='text-center'>
-    <h2 class="h3 mb-3 font-weight-normal">Store owner Sign In With</h2>
-    <div class="form-group">
-      <button igxButton="outlined" (click)="socialSignIn('google')">
-          <img width="20px" style="margin-bottom:3px; margin-right:5px" alt="Google sign-in"
-            src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" />
-           Google 
-       </button>
-    </div> 
-    
-    
-  </body>
+<div class="form-group">
+  <button   (click)="socialSignIn('google')">
+    <img src="../../assets/img/googleIcone.png"/>
+  </button>
 </div>
-
