--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <body>
-  <div class=" container-fluid">
+  <div class="wrapper">
     <div class="row">
       <div class="col-sm-2">
         <igx-avatar [src]="storeOwner.picture" roundShape="true" size="large"></igx-avatar>
