--- a/src/app/main-screen/main-screen.component.html
+++ b/src/app/main-screen/main-screen.component.html
@@ -1,16 +1,34 @@
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-4">  </div>
-        <div class="col-sm-4" id="store-check-in"> <app-store-check-in></app-store-check-in> </div>
-        <div class="col-sm-4">  </div>
-    </div>
-    <hr class="my-4">
-        <div class="row" id="bottom">
-            <div class="col-sm-4">  </div>
-            <div class="col-sm-4" id="login">
-                <app-login></app-login>
+<div class="wrapper">
+    <header class="header">
+        <h1>Registration platform for businesses</h1>
+    </header>
+    <div class="main">
+        <div class="content">
+            <div class="content-left"><img src="../../assets/img/logo.png" class="logo"></div>
+            <div class="content-right">
+               
+                <ul style="list-style-type:circle">
+                    <li>Handle, manage and control clients visits</li>
+                    <li>Keep track of customers with a virtual reception</li>
+                    <li>Monitor queues</li>
+                    <li>Reach the clients via a helpful landing page.</li>
+                </ul>
             </div>
-            <div class="col-sm-4">  </div>
         </div>
+        <div class="aside">
+            <aside class="aside-1">
+                <img src="../../assets/img/VisitorEntrance.png" class="img-signin">
+                <div class="check-in-input">
+                    <app-store-check-in></app-store-check-in>
+                </div>
+            </aside>
+            <aside class="aside-2">
+                <img src="../../assets/img/signinbkg.png" class="img-signin">
+                <div class="login-button">
+                    <app-login></app-login>
+                </div>
+            </aside>
+        </div>
+    </div>
+    <footer class="footer">Footer</footer>
 </div>
-
