--- a/src/app/store-check-in/store-check-in.component.scss
+++ b/src/app/store-check-in/store-check-in.component.scss
@@ -18,9 +18,18 @@ igx-icon{
     size: 120px;
 }
 
+.input-group-form {
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12);
+    padding: 12px;
+    margin-bottom: 24px;
+}
+
 label{
     font-size: small;
     margin-bottom: 5px;
+}
+igx-card-header{
+    
 }
 
 
