--- a/src/app/store-check-in/store-check-in.component.html
+++ b/src/app/store-check-in/store-check-in.component.html
@@ -6,7 +6,7 @@
         <div class="form-group">
           <igx-input-group>
             <input igxInput name="storeId" type="text" [(ngModel)]="storeId" required="required" />
-            <label igxLabel for="storeId"></label>
+            <label igxLabel for="storeId">ID</label>
           </igx-input-group>
         </div>
         <div class="form-group">
