--- a/src/app/main-screen/main-screen.component.html
+++ b/src/app/main-screen/main-screen.component.html
@@ -6,13 +6,15 @@
         <div class="content">
             <div class="content-left"><img src="../../assets/img/logo.png" class="logo"></div>
             <div class="content-right">
-               
+                <igx-card>
+                <igx-card-header>Features</igx-card-header>
                 <ul style="list-style-type:circle">
                     <li>Handle, manage and control clients visits</li>
                     <li>Keep track of customers with a virtual reception</li>
                     <li>Monitor queues</li>
                     <li>Reach the clients via a helpful landing page.</li>
                 </ul>
+                </igx-card>
             </div>
         </div>
         <div class="aside">
