--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,17 +1,17 @@
-// Import the IgniteUI themes library first
-@import '~igniteui-angular/lib/core/styles/themes/index';
+// src/styles.scss
+   @import '~igniteui-angular/lib/core/styles/themes/index';
 
-$primary-color: rgb(0, 160, 253);
-$secondary-color: #ffffff; 
+
+   /* autoprefixer grid:on */
+
+
+$primary-color: #2094B9;
+$secondary-color: #131111; 
 
 $my-color-palette: igx-palette(
     $primary: $primary-color,
     $secondary: $secondary-color
 );
-.light-theme {
-    @include igx-light-theme($default-palette);
-}
-
 .dark-theme {
     background: #333;
     color: #fff;
@@ -19,9 +19,17 @@ $my-color-palette: igx-palette(
     @include igx-dark-theme($default-palette);
 }
 
+$custom-theme: igx-grid-theme(
+    $sorted-header-icon-color: #ff00ff,
+    $sortable-header-icon-hover-color: black
+ 
+);
+   @include igx-core();
+   @include igx-theme($my-color-palette);
 
-// IMPORTANT: Make sure you always include igx-core first!
-@include igx-core();
-// Pass the color palette we generated to the igx-bootstrap-theme mixin
-@include igx-bootstrap-theme($my-color-palette);
+@font-face {
+  font-family: "LibreBaskerville";
+  src: url("./assets/fonts/LibreBaskerville/LibreBaskerville-Bold.ttf");
+}
+
 
