--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,3 +1,4 @@
+@import '~igniteui-angular/lib/core/styles/themes/index';
 
 
 
@@ -9,7 +10,7 @@
 
 .header {
   display: flex;
-  background-color: #555955;
+  background-color: #2f2e33;
   font-family:'Arial Narrow Bold';
   color: white;
   
@@ -26,7 +27,7 @@
 
 .main-panel{
     display: flex;
-    background-color: #2094B9;
+    background-color: #d5d6d2;
 }
 .left-main-panel{
     flex: 30%;
@@ -36,17 +37,14 @@
     flex:40%;
 }
 
-.storeOwnerCard{
-    text-align: center;
-       
-}
+
 
 .right-main-panel{
         flex: 30%;
 
 }
 igx-card{
-    background-color:#CFAA88;
+  
     margin: 20px;
 }
 
@@ -56,12 +54,19 @@ igx-card{
 }
 
 .footer{
-  background-color: #555955;
+  background-color: #3a5199;
   font-family:'Arial Narrow Bold';
   color: white;
   
 }
+$colorful-card: igx-card-theme(
+    $background: #3a5199,
+    $header-text-color: #FEFEFE,
+    $subtitle-text-color: #2f2e33,
+    $content-text-color: #FEFEFE
+);
 
+@include igx-card($colorful-card);
 
 
 
