--- a/src/app/monitor-queues/monitor-queues.component.html
+++ b/src/app/monitor-queues/monitor-queues.component.html
@@ -1,3 +1,3 @@
 <p>
-  <igx-grid #monitorGrid id="monitorGrid" [autoGenerate]="true"></igx-grid>
+  <igx-grid #monitorGrid [data] = "VisitorsQueue" id="monitorGrid" [autoGenerate]="true"></igx-grid>
 </p>
