--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -71,7 +71,7 @@
   
   
   <div class="visitorsGrid" >
-    <igx-grid  #myGrid [displayDensity]= "'cosy'"[data]="visitors" [primaryKey]="'id'" width="100%" height="auto" (onRowEdit)="editDone($event)"
+    <igx-grid  #myGrid [displayDensity]= "'cosy'"[data]="visitors" [paging]="true" [perPage]="10" [primaryKey]="'id'" width="100%" height="auto" (onRowEdit)="editDone($event)"
       [rowEditable]="true" [showToolbar]="true"  toolbarTitle="Visitors"  >
       <igx-column field="id" header="Id" editable="false" sortable="true"></igx-column>
       <igx-column field="first_name" header="First name" [dataType]="'string'"></igx-column>
