--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,26 +5,25 @@
       <span igxButton="outlined" (click)="logout()">Sign Out </span>
     </div>
     <div class="logo">
+      <h1>Store DashBoard</h1>
     </div>
   </header>
-  
-  
   <div class="main-panel">
     <div class="left-main-panel">
-              <igx-card>
-                <igx-card-header>  </igx-card-header>
-                <igx-card-content>  </igx-card-content>
-                <igx-card-actions>
-                  <div class="igx-card-actions__igroup--start">
-                    <span igxButton="icon" igxRipple igxRippleCentered="true">
-                      <igx-icon name="add"></igx-icon>
-                    </span>
-                    <span igxButton="icon" igxRipple igxRippleCentered="true">
-                      <igx-icon name="star"></igx-icon>
-                    </span>
-                  </div>
-                </igx-card-actions>
-              </igx-card>
+      <igx-card>
+        <igx-card-header> </igx-card-header>
+        <igx-card-content> </igx-card-content>
+        <igx-card-actions>
+          <div class="igx-card-actions__igroup--start">
+            <span igxButton="icon" igxRipple igxRippleCentered="true">
+              <igx-icon name="add"></igx-icon>
+            </span>
+            <span igxButton="icon" igxRipple igxRippleCentered="true">
+              <igx-icon name="star"></igx-icon>
+            </span>
+          </div>
+        </igx-card-actions>
+      </igx-card>
     </div>
     <div class="center-main-panel">
       <div class="storeOwnerCard">
@@ -32,9 +31,9 @@
           <igx-card-header> Store details </igx-card-header>
           <igx-card-content>
             <ul>
-          <li> Store name:  {{store.store_name}}</li>
-          <li>Your store ID is: {{store.id}}</li>
-          </ul>
+              <li> Store name: {{store.store_name}}</li>
+              <li>Your store ID is: {{store.id}}</li>
+            </ul>
           </igx-card-content>
           <igx-card-actions>
             <div class="igx-card-actions__igroup--start">
@@ -50,35 +49,38 @@
       </div>
     </div>
     <div class="right-main-panel">
-              <igx-card>
-                <igx-card-header> </igx-card-header>
-                <igx-card-content> 
-                  <app-monitor-queues [VisitorsQueue] = "todayVisitors"></app-monitor-queues> 
-                </igx-card-content>
-                <igx-card-actions>
-                  <div class="igx-card-actions__igroup--start">
-                    <span igxButton="icon" igxRipple igxRippleCentered="true">
-                      <igx-icon name="add"></igx-icon>
-                    </span>
-                    <span igxButton="icon" igxRipple igxRippleCentered="true">
-                      <igx-icon name="star"></igx-icon>
-                    </span>
-                  </div>
-                </igx-card-actions>
-              </igx-card>
+      <igx-card>
+        <igx-card-header> </igx-card-header>
+        <igx-card-content>
+          <app-monitor-queues [VisitorsQueue]="todayVisitors"></app-monitor-queues>
+        </igx-card-content>
+        <igx-card-actions>
+          <div class="igx-card-actions__igroup--start">
+            <span igxButton="icon" igxRipple igxRippleCentered="true">
+              <igx-icon name="add"></igx-icon>
+            </span>
+            <span igxButton="icon" igxRipple igxRippleCentered="true">
+              <igx-icon name="star"></igx-icon>
+            </span>
+          </div>
+        </igx-card-actions>
+      </igx-card>
     </div>
   </div>
-  
-  
-  <div class="visitorsGrid" >
-    <igx-grid  #myGrid [displayDensity]= "'cosy'"[data]="visitors" [paging]="true" [perPage]="10" [primaryKey]="'id'" width="100%" height="auto" (onRowEdit)="editDone($event)"
-      [rowEditable]="true" [showToolbar]="true"  toolbarTitle="Visitors"  >
+  <div class="grid__header">
+  <button igxButton="raised" (click)="dialogAdd.open()" class="addProdBtn">Add New Visitor</button>
+  </div>
+  <div class="visitorsGrid">
+    <igx-grid #myGrid [displayDensity]="'cosy'" [data]="visitors" [paging]="true" [perPage]="10" [primaryKey]="'id'"
+      width="100%" height="auto" (onRowEdit)="editDone($event)" [rowEditable]="true">
       <igx-column field="id" header="Id" editable="false" sortable="true"></igx-column>
       <igx-column field="first_name" header="First name" [dataType]="'string'"></igx-column>
       <igx-column field="last_name" header="Last name" [dataType]="'string'"></igx-column>
       <igx-column field="phone" header="Phone" [dataType]="'string'" sortable="true"></igx-column>
       <igx-column field="email" header="Email" [dataType]="'string'"></igx-column>
-      <igx-column field="time" header="Time" [dataType]="'string'" editable="false" sortable="true"></igx-column>
+      <igx-column field="time" header="Date and time" [dataType]="'string'" editable="false" sortable="true"
+        [resizable]="true">
+      </igx-column>
       <ng-template igxCellEditor let-cell="cell">
         <igx-input-group>
           <input igxInput [igxFocus]='true' name="units" [(ngModel)]="cell.editValue" style="color: black" />
@@ -97,4 +99,41 @@
     </igx-grid>
   </div>
   <footer class="footer">Footer</footer>
+</div>
+
+
+<div class="dialogNewRecord">
+  <igx-dialog #dialogAdd title="New Product" [rightButtonLabel]="'Add'" [leftButtonLabel]="'Cancel'"
+    (onLeftButtonSelect)="cancel()" (onRightButtonSelect)="addRow()">
+    <div class="dialogNewRecord">
+      <igx-input-group class="input-group-form">
+        <label igxLabel class="igxLabel" for="first_name"> First Name </label>
+        <input igxInput name="first_name" type="text"  [(ngModel)]="visitor.first_name" required>
+        <igx-suffix>
+          <igx-icon isActive="true">person</igx-icon>
+        </igx-suffix>
+      </igx-input-group>
+      <igx-input-group class="input-group-form">
+        <label igxLabel for="last_name"> Last Name </label>
+        <input igxInput name="last_name" type="text" [(ngModel)]="visitor.last_name" required>
+        <igx-suffix>
+          <igx-icon isActive="true">person</igx-icon>
+        </igx-suffix>
+      </igx-input-group>
+      <igx-input-group class="input-group-form">
+        <label igxLabel for="phone"> Phone </label>
+        <input igxInput name="phone" type="text"  [(ngModel)]="visitor.phone" required>
+        <igx-suffix>
+          <igx-icon isActive="true">phone</igx-icon>
+        </igx-suffix>
+      </igx-input-group>
+      <igx-input-group class="input-group-form">
+        <label igxLabel for="email"> E-mail </label>
+        <input igxInput name="email" type="text" [(ngModel)]="visitor.email" required>
+        <igx-suffix>
+          <igx-icon>email</igx-icon>
+        </igx-suffix>
+      </igx-input-group>
+    </div>
+  </igx-dialog>
 </div>
