--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -22,6 +22,7 @@
 }
 .logo{
    flex: 90%;
+   text-align: center;
 
 }
 
@@ -55,18 +56,39 @@ igx-card{
 
 .footer{
   background-color: #3a5199;
-  font-family:'Arial Narrow Bold';
   color: white;
-  
 }
+.dialogNewRecord {
+    margin: 10px;
+    padding: 10px;
+    #discontinued {
+        margin-top: 15px; 
+    }
+}
+
+$primary: #3a5199 !default;
+$secondary: white !default;
+
+$app-palette: igx-palette($primary, $secondary);
+
+@include igx-core();
+@include igx-theme($app-palette);
+
+
 $colorful-card: igx-card-theme(
     $background: #3a5199,
     $header-text-color: #FEFEFE,
     $subtitle-text-color: #2f2e33,
     $content-text-color: #FEFEFE
 );
-
+$new-grid-theme: igx-grid-theme(
+  $row-odd-background: rgba(179,229,252 ,1),
+  $row-even-background: rgba(255,249,196 ,1),
+  $row-odd-text-color: rgba(50, 0, 100, .74),
+  $row-even-text-color: rgba(128, 33, 77, .74)
+);
 @include igx-card($colorful-card);
+@include igx-grid($new-grid-theme);
 
 
 
