--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,30 +2,14 @@
   <header class="header">
     <div class="avatar-and-logout">
       <igx-avatar [src]="storeOwner.picture" roundShape="true" size="large"></igx-avatar>
-      <span igxButton="outlined" (click)="logout()">Sign Out </span>
+      <span igxButton="raised" (click)="logout()">Sign Out </span>
     </div>
-    <div class="logo">
+    <div class="title">
       <h1>Store DashBoard</h1>
     </div>
   </header>
   <div class="main-panel">
     <div class="left-main-panel">
-      <igx-card>
-        <igx-card-header> </igx-card-header>
-        <igx-card-content> </igx-card-content>
-        <igx-card-actions>
-          <div class="igx-card-actions__igroup--start">
-            <span igxButton="icon" igxRipple igxRippleCentered="true">
-              <igx-icon name="add"></igx-icon>
-            </span>
-            <span igxButton="icon" igxRipple igxRippleCentered="true">
-              <igx-icon name="star"></igx-icon>
-            </span>
-          </div>
-        </igx-card-actions>
-      </igx-card>
-    </div>
-    <div class="center-main-panel">
       <div class="storeOwnerCard">
         <igx-card>
           <igx-card-header> Store details </igx-card-header>
@@ -48,11 +32,35 @@
         </igx-card>
       </div>
     </div>
+    <div class="center-main-panel">
+      <igx-card>
+        <igx-card-header> Next visitor </igx-card-header>
+        <igx-card-content *ngIf="nextVisitors">
+          <ul>
+            <li>Full Name: {{nextVisitors.first_name}}, {{nextVisitors.last_name}} </li>
+            <li>Time Of Arrival: {{nextVisitors.time}}</li>
+          </ul>
+        </igx-card-content>
+        <igx-card-content *ngIf="!nextVisitors"> No Visitors at the moment </igx-card-content>
+        <igx-card-actions>
+          <div class="igx-card-actions__igroup--start">
+            <span igxButton="icon" igxRipple igxRippleCentered="true">
+              <igx-icon name="add"></igx-icon>
+            </span>
+            <span igxButton="icon" igxRipple igxRippleCentered="true">
+              <igx-icon name="star"></igx-icon>
+            </span>
+          </div>
+        </igx-card-actions>
+      </igx-card>
+    </div>
     <div class="right-main-panel">
       <igx-card>
-        <igx-card-header> </igx-card-header>
+        <igx-card-header>Queue Monitor</igx-card-header>
         <igx-card-content>
-          <app-monitor-queues [VisitorsQueue]="todayVisitors"></app-monitor-queues>
+          <app-monitor-queues [VisitorsQueue]="todayVisitors"
+            (visitorRemoveFromQueue)="onVisitorRemoveFromQueue($event)">
+          </app-monitor-queues>
         </igx-card-content>
         <igx-card-actions>
           <div class="igx-card-actions__igroup--start">
@@ -67,8 +75,9 @@
       </igx-card>
     </div>
   </div>
-  <div class="grid__header">
-  <button igxButton="raised" (click)="dialogAdd.open()" class="addProdBtn">Add New Visitor</button>
+  <div class="visitor_grid__header">
+    <h3>Visitors Log</h3>
+    <button igxButton="raised" (click)="dialogAdd.open()" class="addProdBtn">Add New Visitor</button>
   </div>
   <div class="visitorsGrid">
     <igx-grid #myGrid [displayDensity]="'cosy'" [data]="visitors" [paging]="true" [perPage]="10" [primaryKey]="'id'"
@@ -100,15 +109,13 @@
   </div>
   <footer class="footer">Footer</footer>
 </div>
-
-
 <div class="dialogNewRecord">
-  <igx-dialog #dialogAdd title="New Product" [rightButtonLabel]="'Add'" [leftButtonLabel]="'Cancel'"
+  <igx-dialog #dialogAdd title="ADD VISITOR" [rightButtonLabel]="'Add'" [leftButtonLabel]="'Cancel'"
     (onLeftButtonSelect)="cancel()" (onRightButtonSelect)="addRow()">
     <div class="dialogNewRecord">
       <igx-input-group class="input-group-form">
         <label igxLabel class="igxLabel" for="first_name"> First Name </label>
-        <input igxInput name="first_name" type="text"  [(ngModel)]="visitor.first_name" required>
+        <input igxInput name="first_name" type="text" [(ngModel)]="visitor.first_name" required>
         <igx-suffix>
           <igx-icon isActive="true">person</igx-icon>
         </igx-suffix>
@@ -122,7 +129,7 @@
       </igx-input-group>
       <igx-input-group class="input-group-form">
         <label igxLabel for="phone"> Phone </label>
-        <input igxInput name="phone" type="text"  [(ngModel)]="visitor.phone" required>
+        <input igxInput name="phone" type="text" [(ngModel)]="visitor.phone" required>
         <igx-suffix>
           <igx-icon isActive="true">phone</igx-icon>
         </igx-suffix>
